Interim. Shiny new strategy.
Join is now the seeding of the member digest list, and a seed list of
SignedNotes which is the union of the joining member's predecessors and
successors.

Gossip takes care of the rest of the fill